[gd_scene load_steps=3 format=3 uid="uid://cy85d3dmowhsg"]

[ext_resource type="Script" path="res://scenes/UI/save_menu/save_menu.gd" id="1_vmjpq"]
[ext_resource type="PackedScene" uid="uid://b7uqdgsswwovd" path="res://scenes/UI/save_menu/save_slot/save_slot.tscn" id="2_xcxad"]

[node name="SaveMenu" type="CanvasLayer"]
script = ExtResource("1_vmjpq")
save_slot_instance = ExtResource("2_xcxad")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SaveTab" type="PanelContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/VBoxContainer/SaveTab"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/SaveTab/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SaveTextEdit" type="TextEdit" parent="MarginContainer/PanelContainer/VBoxContainer/SaveTab/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(932, 50)
layout_mode = 2
placeholder_text = "Save-NOW"

[node name="Save" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/SaveTab/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Save"

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/PanelContainer/VBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(1112, 528)
layout_mode = 2

[node name="SaveContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/PanelContainer/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1112, 528)
layout_mode = 2

[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/SaveTab/MarginContainer/HBoxContainer/Save" to="." method="_on_save_pressed"]
